<resources>
    <string name="app_name">ZZAZZ</string>
    <string name="default_notification_channel_id">chanelID</string>
    <string name="default_notification_channel_name">Test</string>

    <!--    string of permission dialog-->
    <string name="permission_title">Access Right Notice</string>
    <string name="permission_subtitle">To use ZZAZZ, you should allow\naccess to the following permissions.</string>
    <string name="storage_permission">Storage</string>
    <string name="camera_permission">Camera&#160;</string>
    <string name="optional">(Optional)</string>
    <string name="storage_script">Load videos, Save videos</string>
    <string name="camera_script">Take videos</string>
    <string name="ok">Okay</string>

    <!--    string of going to setting dialog-->
    <string name="setting_title">Permission Denied</string>
    <string name="setting_storage_script">ZZAZZ needs access right to your storage for all the\nfeatures. Go to setting and check "Allow".</string>
    <string name="setting_video_script">ZZAZZ needs access right to your camera to take\nvideos. Go to setting and check "Allow".</string>
    <string name="to_setting">Go to setting</string>

    <!--    string of intro activity-->
    <string name="intro1">Super cool,\nbut also\nsuper easy!</string>
    <string name="intro2">Let\'s\nspice up\nyour videos.</string>
    <string name="intro3">Want a video\nthat gets\ntons of Likes?</string>
    <string name="intro4">Heyyy.\nThere\'s some\ncool stuff here.</string>
    <string name="intro5">Tap, Tap, Ta-da!\nYou just made an artwooork.</string>
    <string name="load">Tap to load a video.</string>

    <!--    string of trimming activity-->
    <string name="trim_title">Trim</string>
    <string name="go_to_project_activity" translatable="false">done</string>
    <string name="go_to_the_main_page">Go to the main page.</string>
    <string name="one_frame_advance">+1Frame</string>
    <string name="one_frame_retreat">-1Frame</string>
    <string name="start_trim">Drag to select a range.</string>

    <!--    string of going to trim dialog-->
    <string name="alert_title">Go back to trim?</string>
    <string name="alert_script">The ongoing history will disappear.</string>
    <string name="to_trim">Go back to trim</string>
    <string name="cancel">Cancel</string>

    <!--    string of project activity-->
    <string name="project_title">PROJECT</string>
    <string name="export">EXPORT</string>
    <string name="head_effect">Head</string>
    <string name="left_arm_effect">Left arm</string>
    <string name="right_arm_effect">Right arm</string>
    <string name="left_leg_effect">Left leg</string>
    <string name="right_leg_effect">Right leg</string>
    <string name="save_project">Project Name</string>
    <string name="default_name">Project</string>
    <string name="go_back" translatable="false">Go back</string>

    <!--    string of export activity-->
    <string name="export_title">PREVIEW</string>
    <string name="done">DONE</string>
    <string name="start_preview">00:00</string>
    <string name="save_text">Save</string>
    <string name="saved_text">Saved</string>
    <string name="share_text">Share</string>
    <string name="file_name">ZZAZZ</string>

    <!--    string of loading dialog-->
    <string name="trim_video">Getting ready for a project!</string>
    <string name="apply_effect">Applying the effect!</string>
    <string name="export_video">Exporting your work!</string>
    <string name="save_video">Saving your work!</string>

    <string name="game_view_content_description" translatable="false">Game view</string>

</resources>
