<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".ui.PermissionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4849">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/ic_zzazz"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/permission_title"
            android:textColor="@color/ZZAZZWhite"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/archivo_medium"
            android:text="@string/permission_subtitle"
            android:textAlignment="center"
            android:textColor="#9fff"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <View
                android:layout_width="248dp"
                android:layout_height="0.5dp"
                android:background="@color/ContentsText40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/storage_permission"
                android:textColor="@color/ZZAZZWhite"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/storage_script"
                android:textColor="#9fff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/ZZAZZWhite"
                android:textIsSelectable="false"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/camera_script"
                android:textColor="#9fff"
                android:textSize="12sp" />

            <View
                android:layout_width="280dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="24dp"
                android:background="#9fff" />

        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/Background"
            android:text="@string/ok"
            android:textColor="@color/PointColor"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>